k8s-object/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: app
  labels:
    app: app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app/index.html
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 80
